--- a/src/app/account/components/register/register.component.html
+++ b/src/app/account/components/register/register.component.html
@@ -29,7 +29,7 @@
 
               <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
 
-              <button class="btn btn-outline-light btn-lg px-5" type="submit" (click)="onRegister()" [disabled]="userName.invalid || email.invalid || password.invalid">
+              <button class="btn btn-outline-light btn-lg px-5" type="submit" (click)="SignUp(email.getRawValue().toString(), password.getRawValue().toString())" [disabled]="userName.invalid || email.invalid || password.invalid">
                 Register
               </button>
 
