--- a/src/app/session/components/layout/layout.component.html
+++ b/src/app/session/components/layout/layout.component.html
@@ -49,7 +49,7 @@
               </div>
 
             </div>
-            <button class="btn btn-outline-light btn-lg px-5" type="submit" (click)="onLeave()">
+            <button class="btn btn-outline-light btn-lg px-5" type="submit" (click)="leave()">
               Leave
             </button>
 
