--- a/src/app/session/components/layout/layout.component.html
+++ b/src/app/session/components/layout/layout.component.html
@@ -35,7 +35,7 @@
               <div class="row">
                 <div class="msg-box">
                   <div *ngFor="let item of messageArray">
-                    <span><strong>{{item.user}} : </strong> {{item.message}}</span>
+                    <span><strong>{{item.name}} : </strong> {{item.text}}</span>
                   </div>
                 </div>
               </div>
