--- a/src/app/account/components/login/login.component.html
+++ b/src/app/account/components/login/login.component.html
@@ -12,7 +12,7 @@
               <div class="form-group">
                 <div class="form-outline form-white mb-4">
                   <input type="userName" id="typeUserNameX" class="form-control form-control-lg" [formControl]="userName" />
-                  <label class="form-label" for="typeUserNameX">Username</label>
+                  <label class="form-label" for="typeUserNameX">Email</label>
                 </div>
               </div>
 
