--- a/src/app/session/components/layout/layout.component.html
+++ b/src/app/session/components/layout/layout.component.html
@@ -5,12 +5,12 @@
         <div class="card bg-dark text-white" style="border-radius: 1rem;">
           <div class="card-body p-5 text-center">
 
-            <h2 class="fw-bold mb-2 text-uppercase">Realtime Chat Application</h2>
+            <h2 class="fw-bold mb-2 text-uppercase">Friendly Chat Application</h2>
             <!--              <p class="text-white-50 mb-5">Public Room!</p>-->
 
             <div class="mb-md-5 mt-md-4 pb-5">
 
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-sm-4">
                   <label for="roomInput">Choose room</label>
                   <select name="roomInput" id="roomInput" class="form-control" [(ngModel)]="room">
@@ -22,7 +22,7 @@
                   <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" [(ngModel)]="user" class="form-control" id="username" placeholder="Enter username">
-                    <!-- <small id="userHelp" class="form-text text-muted">Type your username.</small> -->
+                     <small id="userHelp" class="form-text text-muted">Type your username.</small> 
                   </div>
                 </div>
                 <div class="col sm-2">
@@ -30,7 +30,7 @@
                     <button type="button" class="btn btn-primary" (click)="join()">Join</button>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <div class="row">
                 <div class="msg-box">
@@ -50,7 +50,7 @@
 
             </div>
             <button class="btn btn-outline-light btn-lg px-5" type="submit" (click)="leave()">
-              Leave
+              Sign Out
             </button>
 
           </div>
