--- a/src/app/account/components/login/login.component.html
+++ b/src/app/account/components/login/login.component.html
@@ -21,7 +21,7 @@
                 <label class="form-label" for="typePasswordX">Password</label>
               </div>
 
-              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+              <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> -->
 
               <button class="btn btn-outline-light btn-lg px-5" type="submit" (click)="SignIn(userName.getRawValue().toString(), password.getRawValue().toString())" [disabled]="userName.invalid || password.invalid">
                 Login
