--- a/src/app/session/components/layout/layout.component.scss
+++ b/src/app/session/components/layout/layout.component.scss
@@ -10,7 +10,9 @@
 }
 
 .msg-box {
-  height:300px;
+  height:250px;
   padding:15px;
   text-align: left;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
