add time and fix username

--- a/src/app/session/components/layout/layout.component.html
+++ b/src/app/session/components/layout/layout.component.html
@@ -35,7 +35,11 @@
               <div class="row">
                 <div class="msg-box" #scroll>
                   <div *ngFor="let item of messageArray">
-                    <span><strong>{{item.name}} : </strong> {{item.text}}</span>
+
+                    <span><strong>[{{item.date}}] {{item.name}} : </strong>  &nbsp;{{item.text}} </span>
+                    
+                   
+            
                   </div>
                 </div>
               </div>
