--- a/src/app/session/components/layout/layout.component.html
+++ b/src/app/session/components/layout/layout.component.html
@@ -36,7 +36,7 @@
                 <div class="msg-box" #scroll>
                   <div *ngFor="let item of messageArray">
 
-                    <span><strong>[{{item.date}}] {{item.name}} : </strong>  &nbsp;{{item.text}} </span>
+                    <span><strong>{{item.date}} {{item.name}} : </strong>  &nbsp;{{item.text}} </span>
                     
                    
             
